# JEBLib

./: CMakeLists.txt  LICENSE.txt  README.md
JEBBase/: CMakeLists.txt
JEBBase/JEBBase/: CMakeLists.txt  JEBAlgorithms.hpp  JEBBaseDefinitions.hpp
JEBBase/JEBBase/Algorithms/: Algorithms.hpp  AlgorithmsCpp14.hpp  CMakeLists.txt  KeyFunctionAlgorithms.hpp  Sort.hpp
JEBBase/JEBBase/Bits/: BitIterator.hpp  BitSet.cpp  BitSet.hpp  Bits.hpp  Bits_Impl.hpp  CMakeLists.txt  Endian.hpp  Integers.hpp  PackedDateTime.cpp  PackedDateTime.hpp  SparseBitSet.cpp  SparseBitSet.hpp  Union16.hpp  Union32.hpp  Union64.hpp
JEBBase/JEBBase/Containers/: Array2D-Impl.hpp  Array2D.hpp  Array2D_Impl.hpp  Buffer2D-Impl.hpp  Buffer2D.hpp  CMakeLists.txt  CircularArray2D-Impl.hpp  CircularArray2D.hpp  IntervalMap.hpp  MapUtilities.hpp  PairUtilities.hpp  SetUtilities.hpp  SortedContainer.h  UniquePairSet.hpp  VectorUtilities.hpp
JEBBase/JEBBase/Functional/: CMakeLists.txt  Pairs.hpp  Predicates.hpp
JEBBase/JEBBase/Iterators/: CMakeLists.txt  CircularListIterator.hpp  Iterators.hpp  PairInserter.hpp
JEBBase/JEBBase/Ranges/: CMakeLists.txt  Range.hpp  RangeAlgorithms.hpp
JEBBase/JEBBase/StateMachine/: ActionParameter.hpp  ActionParameter_impl.hpp  CMakeLists.txt  StateMachine.hpp  StateMachine_impl.hpp  Transition.hpp  Transition_impl.hpp  Typedefs.hpp
JEBBase/UnitTest/: CMakeLists.txt
JEBBase/UnitTest/AlgorithmsTest/: CMakeLists.txt  test_Algorithms.cpp  test_KeyFunctionAlgorithms.cpp
JEBBase/UnitTest/BitsTest/: CMakeLists.txt  test_BitSet.cpp  test_Bits.cpp  test_Endian.cpp  test_SparseBitSet.cpp
JEBBase/UnitTest/ContainersTest/: CMakeLists.txt  test_Array2D.cpp  test_CircularArray2D.cpp  test_IntervalMap.cpp
JEBBase/UnitTest/IteratorsTest/: CMakeLists.txt  test_Iterators.cpp
JEBBase/UnitTest/RangesTest/: CMakeLists.txt  test_RangeAlgorithms.cpp
JEBBase/UnitTest/StateMachineTest/: CMakeLists.txt  test_StateMachine.cpp
JEBIO/: CMakeLists.txt
JEBIO/JEBIO/: CMakeLists.txt  JEBIODefinitions.hpp  JEBPath.hpp
JEBIO/JEBIO/Json/: CMakeLists.txt  JsonParser.hpp  JsonReader.cpp  JsonReader.hpp  JsonStateMachine.cpp  JsonStateMachine.hpp  JsonTokenizer.cpp  JsonTokenizer.hpp  JsonValue.cpp  JsonValue.hpp  JsonValueError.hpp  JsonWriter.cpp  JsonWriter.hpp  TextReader.cpp  TextReader.hpp
JEBIO/JEBIO/Paths/: CMakeLists.txt  PathAlgorithms.hpp  PathAlgorithms.impl.hpp  PathFilter.cpp  PathFilter.hpp  PathTokenType.hpp  Paths.cpp  Paths.hpp  UnixPathTokenizer.hpp  UnixPaths.cpp  UnixPaths.hpp  WindowsPathTokenizer.hpp  WindowsPathTokenizer.impl.hpp  WindowsPaths.cpp  WindowsPaths.hpp
JEBIO/JEBIO/Streams/: CMakeLists.txt  StreamFill.hpp  StreamJoin.hpp  StreamRedirection.hpp
JEBIO/JEBIO/Xml/: CMakeLists.txt  Indentation.cpp  Indentation.hpp  XmlWriter.cpp  XmlWriter.hpp
JEBIO/UnitTest/: CMakeLists.txt
JEBIO/UnitTest/JsonTest/: CMakeLists.txt  testsuite_JsonTokenizer.cpp
JEBIO/UnitTest/PathsTest/: test_PathAlgorithms.cpp  test_PathFilter.cpp  test_UnixPathTokenizer.cpp  test_UnixPaths.cpp  test_WindowsPathTokenizer.cpp  test_WindowsPaths.cpp
JEBIO/UnitTest/StreamsTest/: CMakeLists.txt  test_StreamFill.cpp  test_StreamJoin.cpp
JEBIO/UnitTest/XmlTest/: CMakeLists.txt  test_XmlWriter.cpp
JEBMath/: CMakeLists.txt
JEBMath/JEBMath/: CMakeLists.txt  JEBMathDefinitions.hpp  JEBVectorMath.hpp  README.md
JEBMath/JEBMath/Geometry/: Arc.hpp  CMakeLists.txt  CubicHermiteSpline-impl.hpp  CubicHermiteSpline.hpp  CubicHermiteSpline.impl.hpp  Distance-impl.hpp  Distance.hpp  Distance.impl.hpp  HomogeneousTransforms.cpp  HomogeneousTransforms.hpp  Intersections-impl.hpp  Intersections.cpp  Intersections.hpp  Intersections.impl.hpp  Line-impl.hpp  Line.hpp  LineSegment-impl.hpp  LineSegment.hpp  LineSegment.impl.hpp  LineString-impl.hpp  LineString.hpp  LineString.impl.hpp  Matrix.hpp  MatrixFunctions.hpp  MatrixOperators.hpp  PlanarProjection3-impl.hpp  PlanarProjection3.hpp  Plane.hpp  Plane3-impl.hpp  Plane3.hpp  Point.hpp  Point.impl.hpp  Polygon-impl.hpp  Polygon.hpp  Polygon.impl.hpp  PolygonUnwinder.cpp  PolygonUnwinder.hpp  PolygonVertex.cpp  PolygonVertex.hpp  Profile.cpp  (+19 more)
JEBMath/JEBMath/Graphics/: CMakeLists.txt  Color32.cpp  Color32.hpp  HomogeneousTransforms.cpp  HomogeneousTransforms.hpp  Matrix.hpp  MatrixFunctions.hpp  MatrixOperators.hpp  PointVector.hpp  Transforms.cpp  Transforms.hpp  Vector.hpp  VectorAccess.hpp  VectorFunctions.hpp  VectorMath.hpp  VectorOperators.hpp
JEBMath/JEBMath/Math/: ArrayMath.hpp  Binomial.hpp  CMakeLists.txt  Combinations.hpp  Comparisons.hpp  Constants.hpp  CubicFunction.cpp  CubicFunction.hpp  Fraction.hpp  Fraction.impl.hpp  FresnelIntegrals.cpp  FresnelIntegrals.hpp  JEBMath.hpp  Limits.hpp  MathAlgorithms.hpp  Matrix.hpp  Matrix.impl.hpp  MatrixAlgorithms.hpp  MatrixAlgorithms.impl.hpp  Primes.hpp  README.txt  Random.cpp  Random.hpp  Rational.hpp  SquaresAndDiamonds.cpp  SquaresAndDiamonds.hpp  SquaresAndDiamondsGrids.cpp  SquaresAndDiamondsGrids.hpp  Subset.cpp  Subset.hpp  Utilities.hpp
JEBMath/UnitTest/: CMakeLists.txt
JEBMath/UnitTest/GeometryTest/: CMakeLists.txt  test_CubicHermiteSpline.cpp  test_Distance.cpp  test_Intersections.cpp  test_LineString.cpp  test_Matrix.cpp  test_Plane.cpp  test_Plane3.cpp  test_Polygon.cpp  test_PolygonUnwinder.cpp  test_Profile.cpp  test_ProfileMerger.cpp  test_Rect.cpp  test_RotatedRect.cpp  test_SortPoints.cpp  test_Vector.cpp
JEBMath/UnitTest/GraphicsTest/: CMakeLists.txt  test_Color32.cpp  test_Matrix.cpp  test_Vector.cpp
JEBMath/UnitTest/MathTest/: CMakeLists.txt  test_Binomial.cpp  test_Combinations.cpp  test_CubicFunction.cpp  test_Fraction.cpp  test_Matrix.cpp  test_Primes.cpp  test_SquaresAndDiamonds.cpp
JEBString/: CMakeLists.txt  README.md  TODO.md
JEBString/JEBString/: CMakeLists.txt  JEBStringDefinitions.hpp  JEBStringFlags.hpp  JEBStringMacros.hpp  JEBUtf16.hpp  JEBUtf8.hpp
JEBString/JEBString/CodePageStrings/: CMakeLists.txt  CodePage.cpp  CodePage.hpp  CodePageString.cpp  CodePageString.hpp
JEBString/JEBString/Paths/: UnixPaths.cpp  (+12 more)
JEBString/UnitTest/: CMakeLists.txt
(+142 files in other folders)
